<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="you_can_choose_from_a_variety_of_shoes_of_different_brands_30_discount_for_new_customers">You can choose from a variety of shoes of different brands.\n30% discount for new customers.</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions:</string>
    <string name="instructions_text">Click on the add icon and fill in the necessary\ninformation order your new pair of shoes.</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="please_enter_your_password">Please enter your password:</string>
    <string name="please_enter_the_name_of_shoes">Please enter the name of shoes:</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_the_company_of_the_shoes">Please enter the company of the shoes:</string>
    <string name="shoes_company">Shoe Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="please_enter_the_size_of_your_shoes">Please enter the size of your shoes.</string>
    <string name="description">Description...</string>
    <string name="log_out">Log out</string>
    <string name="enter_a_description">Enter a description:</string>
    <string name="company">Company: </string>
    <string name="description2">"Description: "</string>
    <string name="size">"Size: "</string>
    <string name="name">"Name: "</string>
</resources>
