<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.welcome.WelcomeFragment">
    <data>
        <variable
            name="detailViewModel"
            type="com.udacity.shoestore.viewmodels.DetailScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoeNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/please_enter_the_name_of_shoes"
            app:layout_constraintBottom_toTopOf="@+id/shoeName"
            app:layout_constraintStart_toStartOf="@+id/shoeName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/shoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@{detailViewModel.shoeName}"
            app:layout_constraintBottom_toTopOf="@+id/shoeCompanyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameText" />

        <TextView
            android:id="@+id/shoeCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/please_enter_the_company_of_the_shoes"
            app:layout_constraintBottom_toTopOf="@+id/shoeCompany"
            app:layout_constraintStart_toStartOf="@+id/shoeCompany"
            app:layout_constraintTop_toBottomOf="@+id/shoeName" />

        <EditText
            android:id="@+id/shoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:fontFamily="@font/roboto"
            android:hint="@string/shoes_company"
            android:inputType="textPersonName"
            android:text="@{detailViewModel.shoeCompany}"
            app:layout_constraintBottom_toTopOf="@+id/shoeSizeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanyName" />

        <EditText
            android:id="@+id/shoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto"

            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            android:text="@{detailViewModel.shoeSize}"
            app:layout_constraintBottom_toTopOf="@+id/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeText" />

        <TextView
            android:id="@+id/shoeSizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/please_enter_the_size_of_your_shoes"
            app:layout_constraintBottom_toTopOf="@+id/shoeSize"
            app:layout_constraintStart_toStartOf="@+id/shoeSize"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompany" />

        <EditText
            android:id="@+id/description"
            android:layout_width="211dp"
            android:layout_height="89dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:text="@{detailViewModel.shoeDescription}"
            app:layout_constraintBottom_toTopOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"

            android:text="@string/enter_a_description"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/shoeSize" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"

            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"

            android:fontFamily="@font/roboto"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>